--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Home/Index.cshtml
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Home/Index.cshtml
@@ -2,7 +2,99 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="has-text-centered">
-    <h1 class="is-size-1">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@*<section class="hero is-fullheight is-default is-bold is-light">
+        <div class="hero-body">
+            <div class="container has-text-centerd">
+                <h1 class="title">
+                    Fullheight title
+                </h1>
+                <h2 class="subtitle">
+                    Fullheight subtitle
+                </h2>
+            </div>
+        </div>
+    </section>*@
+
+<section class="hero is-fullheight is-bold is-light">
+    <div class="hero-head">
+        <!-- <nav class="navbar">
+            <div class="container">
+                <div class="navbar-brand">
+                    <a class="navbar-item" href="../">
+                        <img src="../images/bulma.png" alt="Logo">
+                    </a>
+                    <span class="navbar-burger burger" data-target="navbarMenu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </span>
+                </div>
+                <div id="navbarMenu" class="navbar-menu">
+                    <div class="navbar-end">
+                        <div class="tabs is-right">
+                            <ul>
+                                <li class="is-active"><a>Home</a></li>
+                                <li><a href="">Examples</a></li>
+                                <li><a href="">Features</a></li>
+                                <li><a href="">Team</a></li>
+                                <li><a href="">Help</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav> -->
+    </div>
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <div class="columns is-vcentered">
+                <div class="column is-5">
+                    <figure class="image is-4by3">
+                        <img src="https://picsum.photos/800/600/?random" alt="Description">
+                    </figure>
+                </div>
+                <div class="column is-6 is-offset-1">
+                    <h1 class="title is-2">
+                        Superhero Scaffolding
+                    </h1>
+                    <h2 class="subtitle is-4">
+                        Let this cover page describe a product or service.
+                    </h2>
+                    <br>
+                    <p class="has-text-centered">
+                        <a class="button is-medium is-info is-outlined">
+                            Learn more
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hero-foot">
+        <div class="container">
+            <div class="tabs is-centered">
+                <ul>
+                    <li><a>And this is the bottom</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
+<!--<div class="section">
+
+    <div class="hero is-success is-fullheight">
+        <h1 class="is-size-1">なんか色々説明</h1>
+        <article>
+            てすとてすと
+        </article>
+    </div>-->
+@*<div class="columns is-centered is-vcentered">
+        <div class="column is-half">
+            <p class="bd-notification is-primary">
+                aaaaaaaaaaaaa
+            </p>
+        </div>
+    </div>*@
+
+<!--</div>-->
