--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/wwwroot/css/site.css
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/wwwroot/css/site.css
@@ -69,3 +69,8 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.wf-mplus1p {
+    font-family: 'M PLUS 1p', sans-serif;
+}
+
