--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Home/Index.cshtml
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="columns is-vcentered is-offset-1">
                 <div class="column is-7">
                     <h1 class="title is-2">
-                        ScreenOverwriter(仮)
+                        CommentShower(仮)(CoS)
                     </h1>
                     <h2 class="subtitle is-4">
                         画面共有でもニコ〇コとかビ〇ビリみたいにコメントを流そう！
@@ -62,7 +62,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
