--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Shared/_Layout.cshtml
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Shared/_Layout.cshtml
@@ -12,11 +12,11 @@
 </head>
 <body class="wf-mplus1p">
     <header>
-        <nav class="navbar is-light">
+        <nav class="navbar">
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item" asp-controller="Home" asp-action="Index">
-                        <label class="label is-large">ScreenOverwriter</label>
+                        <label class="label is-large">Reaction is All You Need.</label>
                     </a>
                 </div>
                 <div class="navbar-end">
