--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/ThreadRoom/_ThreadRoomLayout.cshtml
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/ThreadRoom/_ThreadRoomLayout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body class="wf-mplus1p">
 <header>
-    <nav class="navbar is-light">
+    <nav class="navbar">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" asp-controller="Home" asp-action="Index">
@@ -30,6 +30,9 @@
 <main>
     @RenderBody()
 </main>
+
+@*<footer class="hero is-bold is-light is-fullwidth is-fullheight">
+</footer>*@
 
 <environment include="Development">
     <script src="~/lib/vue/vue.js"></script>
