--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Shared/_Layout.cshtml
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item" asp-controller="Home" asp-action="Index">
-                        <label class="label is-large">Reaction is All You Need.</label>
+                        <label class="label is-large">RAYN.</label>
                     </a>
                 </div>
                 <div class="navbar-end">
