--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Home/Index.cshtml
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/Home/Index.cshtml
@@ -20,13 +20,13 @@
                             <p>
                                 使い方: フォームからスレッドを作成してください。URLが発行されるので、視聴者に共有してください。
                                 視聴者はブラウザで完結します。
-                                画面共有している人はクライアントアプリ(win,mac対応)をダウンロードしてください。
+                                画面共有する人はクライアントアプリ(win,mac対応)をダウンロードしてください。
                             </p>
                         </div>
                     </div>
 
                     <p class="has-text-centered">
-                        <a class="button is-medium is-info is-outlined">
+                        <a class="button is-medium is-info is-outlined" asp-controller="Home" asp-action="Usage">
                             詳しい使い方
                         </a>
                     </p>
