--- a/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/ThreadRoom/_ThreadRoomLayout.cshtml
+++ b/src/Server/ScreenOverwriterServer/ScreenOverwriterServer/Views/ThreadRoom/_ThreadRoomLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ScreenOverwriter</title>
+    <title>@ViewData["Title"] - RAYN.</title>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/bulma/css/bulma.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
