--- a/src/RaynServer/Rayn/Rayn/Views/Shared/_Layout.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - RAYN</title>
+    <title>@ViewData["Title"] - Rayn</title>
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/bulma/css/bulma.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item" asp-controller="Home" asp-action="Index">
-                        <label class="label is-large">RAYN.</label>
+                        <label class="label is-large">Rayn</label>
                     </a>
                 </div>
                 <div class="navbar-end">
