--- a/src/RaynServer/Rayn/Rayn/Views/Thread/Error.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Thread/Error.cshtml
@@ -1,4 +1,8 @@
-﻿@*
+﻿@{
+    ViewData["Title"] = "Error";
+}
+
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 <section class="hero is-fullheight is-bold is-light">
