--- a/src/RaynServer/Rayn/Rayn/Views/Home/Index.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<section class="hero is-fullheight is-bold is-light">
+<section class="hero is-fullheight is-light">
     <div class="hero-body">
         <div class="container has-text-centered">
             <div class="columns is-vcentered is-offset-1">
