--- a/src/RaynServer/Rayn/Rayn/Views/Thread/Index.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Thread/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ThreadViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Thread";
 }
 
 @*
@@ -10,7 +10,7 @@
  2. スレッドID
 *@
 
-<section class="hero is-fullheight is-bold is-light ">
+<section class="hero is-fullheight is-light ">
     <div class="hero-body">
         <div class="container">
             <h4 class="title">新規スレッド名: @Model.ThreadTitle</h4>
