--- a/src/RaynServer/Rayn/Rayn/Views/Shared/_Layout.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Shared/_Layout.cshtml
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/bulma/css/bulma.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400&family=Noto+Sans+JP:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 </head>
-<body class="wf-mplus1p">
+<body class="wf-notosanjp">
     <header>
         <nav class="navbar">
             <div class="container">
