add download link

--- a/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
@@ -18,7 +18,7 @@
                             <p>
                                 こちらでOSにあったクライアントアプリをダウンロードして解凍してください。
                             </p>
-                            <a class="button is-info">ダウンロード</a>
+                            <a class="button is-info" href="https://github.com/nenoNaninu/Rayn/releases">ダウンロード</a>
                         </div>
                     </div>
                 </div>
