--- a/src/RaynServer/Rayn/Rayn/Views/ThreadRoom/_ThreadRoomLayout.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/ThreadRoom/_ThreadRoomLayout.cshtml
@@ -22,6 +22,7 @@
             <div class="navbar-end">
                 <a class="navbar-item" asp-controller="Home" asp-action="Index">Home</a>
                 <a class="navbar-item" asp-controller="Home" asp-action="Usage">Usage</a>
+                <a class="navbar-item" href="https://github.com/nenoNaninu/Rayn">GitHub</a>
             </div>
         </div>
     </nav>
