--- a/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
@@ -27,6 +27,15 @@
             <section class="section">
                 <div class="columns">
                     <div class="column is-8 is-offset-2">
+                        <h1 class="title is-2">使い方動画</h1>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/fFvW8ybUVVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section">
+                <div class="columns">
+                    <div class="column is-8 is-offset-2">
                         <div class="content is-medium">
                             <h1 class="title is-2">使い方</h1>
                             <p>
@@ -50,22 +59,22 @@
                             <p>
                                 起動したら以下のようなUIが現れます。
                                 初期状態では透過などされていません。UI中の<span class="has-text-danger">Transparent ボタン</span>を押すと透過 & 最前面固定されます。
-                                表示したいディスプレイを変えたい時は(windows + shift + 矢印)で切り替えられます。
-                                先ほど作成したクライアント接続用URLを上部テキストエリアにコピペし、<span class="has-text-danger">Connect to Server ボタン</span>を押すとコメントが流れます。
+                                表示したいディスプレイを変えたい時はWindowsの場合は<span class="has-text-danger">windows + shift + 矢印</span>で切り替えられます。
+                                先ほど作成したクライアント接続用URLを上部テキストエリアにコピペし、<span class="has-text-danger">Connect ボタン</span>を押すとコメントが流れます。
+                                proxyの設定が必要ない場合は空欄でOKです。<span class="has-text-danger">Minimize ボタン</span>を押すとUIがタブだけになります。タブをダブルクリックすると再度メニューが開けます。
                             </p>
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="columns">
                     <div class="column is-4 is-offset-4">
-                        <figure class="image is-4by3 ">
+                        <figure class="image is-square ">
                             <img src="~/img/Usage/clientUi.png" alt="">
                         </figure>
                     </div>
                 </div>
             </section>
-
         </div>
     </div>
 </section>
