--- a/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/Home/Usage.cshtml
@@ -6,70 +6,59 @@
 }
 
 <section class="hero is-light">
-    <div class="hero-body">
-        <div class="container">
+    <div class="hero-body ">
+        <div class="container is-max-desktop">
 
             <section class="section">
-                <div class="columns">
-                    <div class="column is-8 is-offset-2">
-                        <div class="content is-medium">
-                            <h1 class="title is-1">ダウンロード</h1>
-                            <h2 class="subtitle is-5">配信者のみ必要です。視聴者はwebで完結します。</h2>
-                            <p>
-                                こちらでOSにあったクライアントアプリをダウンロードして解凍してください。
-                            </p>
-                            <a class="button is-info" href="https://github.com/nenoNaninu/Rayn/releases">ダウンロード</a>
-                        </div>
+
+                <div class="content is-medium has-text-centered">
+                    <h1 class="title is-1">ダウンロード</h1>
+                    <h2 class="subtitle is-5">配信者のみ必要です。視聴者はwebで完結します。</h2>
+                    <p>
+                        こちらでOSにあったクライアントアプリをダウンロードして解凍してください。
+                    </p>
+                    <a class="button is-info" href="https://github.com/nenoNaninu/Rayn/releases">ダウンロード</a>
+                </div>
+            </section>
+
+
+            <section class="section has-text-centered">
+                <h1 class="title is-2 ">使い方動画</h1>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fFvW8ybUVVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+
+            <section class="section">
+                <div class="container">
+                    <div class="content is-medium">
+                        <h1 class="title is-2 has-text-centered">使い方</h1>
+                        <p>
+                            まず <a class="has-text-info" asp-controller="Home" asp-action="Index">ホーム画面</a>にある<span class="has-text-danger">新規スレッドの作成</span>からスレッドを作成してください。
+                            視聴者用のURLとクライアント接続用URLが発行されます。前者は配布してください。後者はクライアントアプリの接続に使います。
+                        </p>
+
+                        <figure class="image">
+                            <img src="~/img/Usage/newThread.png" alt="新しくスレッドを作った直後の画像">
+                        </figure>
                     </div>
                 </div>
             </section>
 
             <section class="section">
-                <div class="columns">
-                    <div class="column is-8 is-offset-2">
-                        <h1 class="title is-2">使い方動画</h1>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/fFvW8ybUVVY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+
+                <div class="content is-medium">
+                    <h1 class="title is-2 has-text-centered">クライアントアプリ設定</h1>
+                    <p>
+                        起動したら以下のようなUIが現れます。
+                        初期状態では透過などされていません。UI中の<span class="has-text-danger">Transparent ボタン</span>を押すと透過 & 最前面固定されます。
+                        表示したいディスプレイを変えたい時はWindowsの場合は<span class="has-text-danger">windows + shift + 矢印</span>で切り替えられます。
+                        先ほど作成したクライアント接続用URLを上部テキストエリアにコピペし、<span class="has-text-danger">Connect ボタン</span>を押すとコメントが流れます。
+                        proxyの設定が必要ない場合は空欄でOKです。<span class="has-text-danger">Minimize ボタン</span>を押すとUIがタブだけになります。タブをダブルクリックすると再度メニューが開けます。
+                    </p>
                 </div>
-            </section>
-
-            <section class="section">
+                
                 <div class="columns">
-                    <div class="column is-8 is-offset-2">
-                        <div class="content is-medium">
-                            <h1 class="title is-2">使い方</h1>
-                            <p>
-                                まず <a class="has-text-info" asp-controller="Home" asp-action="Index">ホーム画面</a>にある<span class="has-text-danger">新規スレッドの作成</span>からスレッドを作成してください。
-                                視聴者用のURLとクライアント接続用URLが発行されます。前者は配布してください。後者はクライアントアプリの接続に使います。
-                            </p>
-
-                            <figure class="image">
-                                <img src="~/img/Usage/newThread.png" alt="新しくスレッドを作った直後の画像">
-                            </figure>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="section">
-                <div class="columns">
-                    <div class="column is-8 is-offset-2">
-                        <div class="content is-medium">
-                            <h1 class="title is-2">クライアントアプリ設定</h1>
-                            <p>
-                                起動したら以下のようなUIが現れます。
-                                初期状態では透過などされていません。UI中の<span class="has-text-danger">Transparent ボタン</span>を押すと透過 & 最前面固定されます。
-                                表示したいディスプレイを変えたい時はWindowsの場合は<span class="has-text-danger">windows + shift + 矢印</span>で切り替えられます。
-                                先ほど作成したクライアント接続用URLを上部テキストエリアにコピペし、<span class="has-text-danger">Connect ボタン</span>を押すとコメントが流れます。
-                                proxyの設定が必要ない場合は空欄でOKです。<span class="has-text-danger">Minimize ボタン</span>を押すとUIがタブだけになります。タブをダブルクリックすると再度メニューが開けます。
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="columns">
-                    <div class="column is-4 is-offset-4">
-                        <figure class="image is-square ">
+                    <div class="column is-8 is-offset-2 ">
+                        <figure class="image is-square is-small">
                             <img src="~/img/Usage/clientUi.png" alt="">
                         </figure>
                     </div>
@@ -77,4 +66,5 @@
             </section>
         </div>
     </div>
+
 </section>
