--- a/src/RaynServer/Rayn/Rayn/Views/ThreadRoom/_ThreadRoomLayout.cshtml
+++ b/src/RaynServer/Rayn/Rayn/Views/ThreadRoom/_ThreadRoomLayout.cshtml
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="~/favicon.ico">
 </head>
-<body class="wf-mplus1p">
+<body class="wf-notosanjp">
 <header>
     <nav class="navbar">
         <div class="container">
